# linthesia

./: .gitignore  CHANGELOG  LICENSE  Makefile.am  README  README.md  configure.ac
docs/web/: index.html
docs/web/css/: theme.css
fonts/: Makefile.am
graphics/: Makefile.am  play_Keys.tga
songs/: Makefile.am
src/: CompatibleSystem.cpp  DrawingArea.cpp  EdgeTracker.cpp  GameState.cpp  GameState.h  KeyboardDisplay.h  Makefile  Makefile.am  PlayingState.cpp  Renderer.h  TextWriter.cpp  TextWriter.h  TitleState.cpp  Version.h  main.cpp
src-old/: DrawingArea.cpp  DrawingArea.h  EdgeTracker.h  KeyboardDisplay.cpp  PlayingState.h  Renderer.cpp  TextWriter.cpp  Textures.h  Tga.cpp  TitleState.cpp  TitleState.h  Version.h  main.cpp
src/assets/: path.h
src/buttons/: abstract_button.cpp  abstract_button.h  long_one_line_button.cpp  long_one_line_button.h  one_line_button.cpp  one_line_button.h  short_one_line_button.cpp  short_one_line_button.h  two_lines_button.cpp  two_lines_button.h
src/context/: context.cpp  context.h
src/icons/: icon.cpp  icon.h
src/keyboard/: black_key.cpp  black_key.h  keyboard.cpp  keyboard.h  trail.cpp  trail.h  white_key.cpp  white_key.h
src/libmidi/: Makefile  midi.cpp  midi.h  midi_event.cpp  midi_event.h  midi_track.cpp  midi_track.h  midi_types.h  midi_util.cpp  midi_util.h  note.h
src/midi_io/: midi_in.cpp  midi_in.h  midi_out.cpp  midi_out.h
src/screens/: abstract_screen.h  screen_index.h  screens.cpp  screens.h
src/screens/file_select_screen/: file_select_screen.cpp  file_select_screen.h
src/screens/game_over_screen/: game_over_screen.cpp  game_over_screen.h
src/screens/main_screen/: main_screen.cpp  main_screen.h  select_midi_in.cpp  select_midi_in.h  select_midi_out.cpp  select_midi_out.h
src/screens/one_player_screen/: black_note_to_play.cpp  black_note_to_play.h  note_ground.cpp  note_ground.h  notes_tracker.cpp  notes_tracker.h  one_player_screen.cpp  one_player_screen.h  score.h  score_display.cpp  score_display.h  white_note_to_play.cpp  white_note_to_play.h
src/screens/select_track_screen/: select_track_screen.cpp  select_track_screen.h  track_box.cpp  track_box.h
src/track_options/: track_options.cpp  track_options.h
src/utilities/: tinydir.h  util.c  util.h
